Fixed overflow issue

--- a/store-item/store-item.component.css
+++ b/store-item/store-item.component.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .item-container {
     position: relative;
     margin: 10px;
@@ -21,7 +27,7 @@ img {
 
 p {
     display: inline-block;
-    font-size: 14px;
+    font-size: 18px;
     font-weight: bold;
-    padding: 0 10px;
+    padding: 10px 10px;
 }
