--- a/store-menu/store-menu.component.css
+++ b/store-menu/store-menu.component.css
@@ -24,10 +24,11 @@ button {
     margin: 10px;
     padding: 10px;
     font-weight: bold;
-    font-size: 14px;
+    font-size: 18px;
     cursor: pointer;
     border-radius: 5px;
     transition: .4s;
+    font-family: 'Dancing Script', cursive;
 }
 
 button:hover {
